iptables-fil
*mangle
:PREROUTING ACCEPT [0:0]
:INPUT ACCEPT [0:0]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
:POSTROUTING ACCEPT [0:0]
COMMIT
*filter
:INPUT ACCEPT [28251:2387673]
:FORWARD DROP [0:0]
:OUTPUT ACCEPT [15649:2006458]
-A FORWARD -i br0 -o eno1 -j ACCEPT
-A FORWARD -i eno1 -o br0 -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A FORWARD -i br0 -o br0 -j ACCEPT
-A FORWARD -i br0 -o eno1 -m conntrack --ctstate NEW -j ACCEPT
-A FORWARD -i br0 -o eno1 -m conntrack --ctstate NEW -j ACCEPT
-A FORWARD -i eno1 -o br0 -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A FORWARD -i br0 -o br0 -j ACCEPT
COMMIT
*nat
:PREROUTING ACCEPT [721:242745]
:INPUT ACCEPT [24:2790]
:OUTPUT ACCEPT [12:908]
:POSTROUTING ACCEPT [167:10396]
-A POSTROUTING -s 10.0.2.0/24 -o eno1 -j MASQUERADE
COMMIT
# Completed on Tue Apr 29 11:41:14 2025
